<resources>
    <string name="app_name">Traveller Track</string>
    <string name="my_app_name">JMST</string>
    <string name="uploadImages">Select Toll/Tax/Parking Slip</string>
    <string name="msg_loading">Loading...</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome Guest</string>
    <string name="nav_header_subtitle">Driver</string>
    <string name="nav_header_desc">Profile details</string>
    <string name="currency_symbol">\u20B9</string>
    <string name="action_settings">Settings</string>
    <!-- Strings related to login -->
    <string name="prompt_username">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">Invalid Username</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_incorrect_password">Incorrect username or password.</string>
    <string name="error_field_required">Please enter all the required field(s)</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="app_text_button_submit">Submit</string>
    <string name="app_text_button_cancel">Cancel</string>
    <string name="booking_info_title">BOOKING INFORMATION</string>
    <string name="app_text_dnd">Toll charge</string>
    <string name="app_text_parking">Parking charge</string>
    <string name="app_text_toll">State Tax</string>
    <string name="end_trip_reading">End trip reading</string>
    <string name="enter_start_add">Enter start address</string>
    <string name="enter_close_add">Enter close address</string>
    <string name="pick_to_drop_in_km">Total Distance(KM)</string>
    <string name="begin_trip">Begin Trip</string>
    <string name="waiting_time">Waiting Time</string>
    <string name="end_trip">End Trip</string>
    <string name="resume_trip">Resume Trip</string>
    <string name="error">Something went wrong. Please try again.</string>
    <string name="app_text_collection_date"> %s</string>
    <string name="feedback">Go For Feedback</string>
    <string name="end_trip_time">End Trip Time</string>
    <string name="thanks_to_travel_user">Thanks for travelling with us, %s</string>
    <string name="app_text_gtog">Garage to garage charge</string>
    <string name="app_text_other_charge_desc">Other charge detail</string>
    <string name="other_amount">Other charge amount</string>
    <string name="customer_name">Customer Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="employee_id">Employee Id</string>
    <string name="file_code">File Code</string>
    <string name="reporting_address">Reporting Address</string>
    <string name="destination_address">Destination Address</string>
    <string name="close_time">Close Time</string>
    <string name="close_date">Close Date</string>
    <string name="start_time">Start Time</string>
    <string name="start_date">Start Date</string>
    <string name="add_booking">Add Booking</string>
    <string name="draw_map">Draw Map</string>
    <string name="draw_signature">Signature</string>
    <string name="booking_type">Booking Type</string>
    <string name="request_success">Booking updated successfully.</string>
    <string name="guest_name">Guest Name</string>
    <string name="wrong_input">Wrong input in booking type. Please enter valid one.</string>
    <string name="booking_added">Booking added successfully.</string>
    <string name="text_ok">OK</string>
    <string name="incorrect_address">Address seems to be incorrect. Please check and try again.</string>

</resources>
