<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dim_16dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_customer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp">

                    <EditText
                        android:id="@+id/customer_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:focusable="false"
                        android:hint="@string/customer_name"
                        android:maxLength="50"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/ddl_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_10dp">

                </androidx.appcompat.widget.AppCompatSpinner>

                <Spinner
                    android:id="@+id/ddl_payment_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_10dp">

                </Spinner>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_guest_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp">

                    <EditText
                        android:id="@+id/guest_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/guest_name"
                        android:inputType="textPersonName"
                        android:maxLength="50"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp">

                    <EditText
                        android:id="@+id/mobile_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_no"
                        android:inputType="phone"
                        android:maxLength="13"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/employee_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/employee_id"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/file_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/file_code"
                            android:imeOptions="actionNext"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/booking_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/booking_type"
                            android:imeOptions="actionNext"
                            android:maxLength="1"
                            android:inputType="textCapCharacters"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="L-Local, O-Outstation, P-Package, T-Tour, N-NCR"
                        android:textSize="12dp" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/ddl_tour_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="@dimen/dim_10dp"
                        android:layout_weight="1">

                    </androidx.appcompat.widget.AppCompatSpinner>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp">

                    <AutoCompleteTextView
                        android:id="@+id/reporting_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/reporting_address"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1"
                    android:visibility="visible">

                    <AutoCompleteTextView
                        android:id="@+id/destination_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/destination_address"
                        android:imeOptions="actionDone"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/start_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/start_date"
                            android:imeOptions="actionNext"
                            android:inputType="none"
                            android:focusable="false"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/start_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/start_time"
                            android:imeOptions="actionDone"
                            android:inputType="none"
                            android:focusable="false"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/close_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/close_date"
                            android:imeOptions="actionNext"
                            android:inputType="none"
                            android:focusable="false"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/close_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/close_time"
                            android:imeOptions="actionDone"
                            android:inputType="none"
                            android:focusable="false"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/ddl_car_group"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_10dp">

                </androidx.appcompat.widget.AppCompatSpinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="bottom"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/app_text_button_submit"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>