<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".views.activities.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form_scroll"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <TextView
                    style="@style/text_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/app_name" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/app_color_black"
                    android:textSize="@dimen/textsize_16" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    style="@style/text_medium_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Guest Login"
                    android:id="@+id/guest_login"
                    android:layout_gravity="center_horizontal"
                    android:checked="true" />

                <RadioButton
                    style="@style/text_medium_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Driver Login"
                    android:layout_marginLeft="@dimen/dim_16dp"
                    android:id="@+id/driver_login"
                    android:layout_gravity="center_horizontal"
                    android:checked="false"/>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="@style/app_button"
                android:id="@+id/email_sign_in_button"
                android:background="@drawable/button_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:textAllCaps="false"
                android:text="@string/action_sign_in" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>